--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -3,8 +3,16 @@
   flex-direction: column;
   margin-top: 70px;
 
+  @include onTablet {
+    margin-top: 88px;
+  }
+
+  @include onDesktop {
+    margin-top: 200px;
+  }
+
   &__title {
-    color: #0f0e08;
+    color: $dark-khaki;
     width: 280px;
     text-align: center;
     font-family: Montserrat, sans-serif;
@@ -12,19 +20,45 @@
     font-style: normal;
     font-weight: 700;
     line-height: 100%; /* 36px */
+
+    @include onTablet {
+      font-size: 48px;
+      width: 100%;
+      text-align: left;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 6;
+    }
   }
 
   &__go-and-come-back {
-    @include centring;
+    display: flex;
     flex-direction: column;
     width: 100%;
     margin-top: 40px;
+
+    @include onTablet {
+      margin-top: 48px;
+    }
+
+    @include onDesktop {
+      @include pageGrid;
+      align-items: center;
+      margin-top: 56px;
+    }
   }
 
   &__img {
     width: 100%;
     height: cover;
     flex-shrink: 0;
+
+    grid-column: 1 / 8;
+  }
+
+  &__information {
+    grid-column: 9 / 13;
   }
 
   &__inform {
@@ -35,16 +69,23 @@
     align-items: center;
     gap: 25px;
 
-    color: #687480;
+    color: $slate-gray;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 100%; /* 16px */
+
+    @include onTablet {
+      margin-top: 44px;
+      font-size: 14px;
+      justify-content: start;
+      align-items: left;
+    }
   }
 
   &__date {
-    color: #1a5a4c;
+    color: $green-pea;
     font-weight: 700;
     line-height: 150%; /* 24px */
   }
@@ -54,37 +95,67 @@
     align-items: center;
     width: 100%;
     margin-top: 15px;
+
+    @include onTablet {
+      margin-top: 32px;
+    }
   }
 
   &__block-title {
     display: flex;
     align-items: center;
-    color: #0f0e08;
+    color: $dark-khaki;
     font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 100%; /* 36px */
+    }
   }
 
   &__block-rectangle {
     display: flex;
     width: 10px;
     height: 10px;
-    background: #f14a27;
+    background: $red;
     margin-left: 15px;
+
+    @include onTablet {
+      width: 15px;
+      height: 15px;
+      margin-left: 20px;
+    }
   }
 
   &__article {
-    color: #4e4e4e;
+    color: $matterhorn;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 300;
     line-height: 150%; /* 24px */
     margin-top: 10px;
+
+    @include onTablet {
+      width: 460px;
+      margin-top: 15px;
+    }
   }
 
   &__memories-and-dreams {
     margin-top: 60px;
+
+    @include onTablet {
+      margin-top: 64px;
+    }
+
+    @include onDesktop {
+      @include pageGrid;
+      align-items: center;
+      margin-top: 104px;
+    }
   }
 }
