--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -9,8 +9,17 @@
   margin-top: 100px;
   padding: 0 20px;
 
+  @include onTablet {
+    margin-top: 92px;
+  }
+
+  @include onDesktop {
+    margin-top: 200px;
+    height: 550px;
+  }
+
   &__title {
-    color: #fff;
+    color: $white;
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-size: 36px;
@@ -18,10 +27,18 @@
     font-weight: 700;
     line-height: 100%; /* 36px */
     margin-top: 88px;
+
+    @include onTablet {
+      font-size: 48px;
+    }
+
+    @include onDesktop {
+      margin-top: 163px;
+    }
   }
 
   &__article {
-    color: #fff;
+    color: $white;
     text-align: center;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 18px;
@@ -29,13 +46,27 @@
     font-weight: 400;
     line-height: 150%; /* 27px */
     margin-top: 20px;
+
+    @include onTablet {
+      margin-top: 16px;
+      line-height: 100%; /* 18px */
+    }
   }
 
   &__button {
     @include centring;
     box-sizing: border-box;
     margin-top: 50px;
-    transition: transform 0.5s;
+
+    @include onTablet {
+      margin-top: 64px;
+    }
+
+    @include onDesktop {
+      margin-top: 72px;
+    }
+
+    @include transform;
   }
 
   &__button:hover {
@@ -45,14 +76,24 @@
   &__input {
     width: 230px;
     height: 50px;
-    border: 1px solid #1a5a4c;
+    border: 1px solid $green-pea;
     cursor: pointer;
-    background-color: #fff;
+    background-color: $white;
     padding-left: 24px;
+
+    @include onTablet {
+      width: 350px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      width: 438px;
+      padding-left: 32px;
+    }
   }
 
   &__input::placeholder {
-    color: #687480;
+    color: $slate-gray;
     font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-style: normal;
@@ -66,6 +107,16 @@
     height: 50px;
     background-color: #f14a27;
     cursor: pointer;
+
+    @include onTablet {
+      margin-left: 16px;
+      width: 70px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      margin-left: 30px;
+    }
   }
 
   &__button-arrow {
