--- a/src/styles/elements/icons.scss
+++ b/src/styles/elements/icons.scss
@@ -1,9 +1,10 @@
 .icon {
   display: flex;
-  background-position: center;
-  background-size: cover;
   height: 24px;
   width: 24px;
+
+  @include background;
+  @include transform;
 }
 
 .menu--icon {
