--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$white: #fff;
+$gray: #1a5a4c40;
+$slate-gray: #687480;
+$green-pea: #1a5a4c;
+$dark-khaki: #0f0e08;
+$beige: beige;
+$light-gray: #e0e0e0;
+$black: #000;
+$light-shade: #ffffff80;
+$red: #f14a27;
+$matterhorn: #4e4e4e;
