--- a/src/styles/blocks/classicism-romanticism.scss
+++ b/src/styles/blocks/classicism-romanticism.scss
@@ -1,6 +1,14 @@
 .classicism-romanticism {
   margin-top: 60px;
 
+  @include onTablet {
+    margin-top: 112px;
+  }
+
+  @include onDesktop {
+    margin-top: 104px;
+  }
+
   &__bg {
     display: flex;
     background-image: url("/images/from-classicism-to-romanticism.png");
@@ -10,6 +18,18 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    @include onTablet {
+      margin-left: 0;
+      width: 100%;
+      height: 390px;
+    }
+
+    @include onDesktop {
+      margin-left: 0;
+      width: 100%;
+      height: 550px;
+    }
   }
 
   &__lecture {
@@ -19,8 +39,19 @@
     height: 140px;
     width: 280px;
     margin-top: -57px;
-    background: #fff;
-    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+    background: $white;
+    box-shadow: 0 2px 0 0 $gray;
+
+    @include onTablet {
+      width: 570px;
+      height: 204px;
+      flex-shrink: 0;
+      margin-top: -82px;
+    }
+
+    @include onTablet {
+      margin-top: -90px;
+    }
   }
 
   &__inform {
@@ -28,33 +59,60 @@
     width: 100%;
     align-items: center;
     justify-content: space-around;
-    color: #687480;
+    color: $slate-gray;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%; /* 16px */
     margin: 20px 0;
 
+    @include onTablet {
+      width: fit-content;
+      font-size: 14px;
+      margin: 23px 0;
+      margin-left: 55px;
+    }
+
+    @include onDesktop {
+      margin-top: 40px;
+      margin-left: 100px;
+    }
   }
 
   &__date {
     display: flex;
-    color: #1a5a4c;
+    color: $green-pea;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: 150%; /* 24px */
+
+    @include onTablet {
+      font-size: 14px;
+      margin-left: 190px;
+    }
   }
 
   &__title {
     display: flex;
     text-align: center;
     width: 100%;
-    color: #0f0e08;
+    color: $dark-khaki;
     font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 100%; /* 36px */
+      text-align: left;
+      margin-left: 55px;
+    }
+
+    @include onDesktop {
+      margin-left: 100px;
+    }
   }
 }
