--- a/src/styles/blocks/constainer.scss
+++ b/src/styles/blocks/constainer.scss
@@ -1,4 +1,11 @@
 .container {
   padding: 9px 20px 0;
-  height: fit-content;
+
+  @include onTablet {
+    padding: 15px 34px 0;
+  }
+
+  @include onDesktop {
+    padding: 15px 55px 0;
+  }
 }
