--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,12 +1,30 @@
 .header {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
   background-image: url(../images/header-background.png);
   background-size: 100% 300px;
   background-position: top;
   background-repeat: no-repeat;
+  height: fit-content;
+
+  @include onTablet {
+    background-position: right top;
+    background-size: 374px 384px;
+  }
+
+  @include onDesktop {
+    height: 100vh;
+    background-size: 55% 100%;
+  }
+
+  &__block {
+    @include onDesktop {
+      @include pageGrid;
+    }
+  }
 
   &__title {
-    color: #000;
+    color: $black;
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-size: 45px;
@@ -14,22 +32,47 @@
     font-weight: 700;
     line-height: 100%; /* 45px */
     margin: 250px 0 auto;
+
+    @include onTablet {
+      text-align: left;
+      margin: 40px 0 0;
+      font-size: 54px;
+      line-height: 120%; /* 64.8px */
+      width: fit-content;
+    }
+
+    @include onDesktop {
+      margin-top: 120px;
+      grid-column: 1 / 6;
+      font-size: 72px;
+    }
   }
 
   &__button {
     @include centring;
     box-sizing: border-box;
-    margin: 0 auto;
     width: 280px;
     height: 50px;
-    border: 1px solid #1a5a4c;
-    margin-top: 20px;
+    border: 1px solid $green-pea;
     cursor: pointer;
+    margin: 20px auto 0;
+    @include transform;
+
+    @include onTablet {
+      width: 270px;
+      height: 70px;
+      margin: 38px 0 0;
+    }
+
+    @include onDesktop {
+      margin-top: 89px;
+      grid-column: 3 / 6;
+    }
   }
 
   &__button-title {
     text-decoration: none;
-    color: #0f0e08;
+    color: $dark-khaki;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -37,17 +80,58 @@
     line-height: 100%; /* 16px */
     padding: 18px 80px;
     margin: 0 auto;
+
+    @include onTablet {
+      padding: 0 68px;
+    }
   }
 
   &__button-rectangle {
     @include centring;
     width: 50px;
     height: 50px;
-    background-color: #1a5a4c;
+    background-color: $green-pea;
+
+    @include onTablet {
+      width: 70px;
+      height: 70px;
+    }
   }
 
   &__button-arrow {
     width: 24px;
     height: 24px;
+  }
+
+  &__events {
+    display: none;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-90deg);
+    margin-top: 50px;
+    margin-left: -60px;
+
+    @include onDesktop {
+      display: flex;
+      grid-column: 1 / 2;
+    }
+  }
+
+  &__line {
+    width: 70px;
+    height: 1px;
+    flex-shrink: 0;
+    background: $green-pea;
+    margin-right: 20px;
+  }
+
+  &__line-title {
+    color: $slate-gray;
+    font-family: IBM Plex Sans, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; /* 14px */
   }
 }
