--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,12 +2,34 @@
   padding: 27px 20px 0;
   box-sizing: border-box;
   height: 399px;
-  background: rgb(26, 90, 76);
-  min-width: 320px;
+  background: $green-pea;
+  transition: all 0.3s;
+  transform: translateX(-100%);
+
+  &:target {
+    transform: translateX(0);
+  }
+
+  @include onTablet {
+    display: flex;
+    padding: 35px 34px 0;
+  }
+
+  @include onDesktop {
+    padding: 40px 55px 0;
+  }
 
   &__top {
     display: flex;
     gap: 28px;
+
+    @include onTablet {
+      gap: 38px;
+    }
+
+    @include onDesktop {
+      gap: 102px;
+    }
   }
 
   &__nav {
@@ -23,10 +45,88 @@
   }
 
   &__link {
-    color: #fff;
+    color: $white;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%; /* 16px */
+    width: 100px;
+
+    @include transform;
+  }
+
+  &__line {
+    display: flex;
+    box-sizing: border-box;
+    height: 1px;
+    width: 100%;
+    background-color: $light-shade;
+    margin-top: 20px;
+
+    @include onTablet {
+      transform: rotate(90deg);
+      width: 145px;
+      margin-top: 70px;
+      margin-left: -30px;
+      margin-right: -20px;
+    }
+
+    @include onDesktop {
+      margin-left: 100px;
+    }
+  }
+
+  &__schedule {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 24px;
+
+    color: $white;
+    font-family: IBM Plex Sans, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 150%; /* 16px */
+
+    @include onTablet {
+      margin-top: 0;
+    }
+
+    @include onDesktop {
+      margin-left: 60px;
+    }
+  }
+
+  &__additional {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__weekends {
+    margin-top: 20px;
+
+    @include onTablet {
+      width: 144px;
+      margin-top: -2px;
+      margin-left: 38px;
+    }
+
+    @include onDesktop {
+      width: 170px;
+      margin-left: 50px;
+    }
+  }
+
+  &__times {
+    display: flex;
+    flex-direction: column;
+
+    @include onTablet {
+      flex-direction: row;
+    }
+  }
+
+  &__bold {
+    font-weight: 600;
   }
 }
