--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,8 @@
 .page {
+  display: flex;
+  flex-direction: column;
   min-width: 320px;
+  scroll-behavior: smooth;
 
   &__menu {
     position: fixed;
