--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,13 +1,26 @@
 .top-bar {
   @include centring;
 
+  @include onTablet {
+    @include pageGrid;
+  }
+
   &__logo {
     background-image: url(../images/logo-mobile.png);
-    background-size: cover;
-    background-position: center;
+    @include background;
     width: 55px;
     height: 61px;
     flex-shrink: 0;
     margin: 0 auto;
+
+    grid-column: 4 / 6;
+
+    @include onTablet {
+      background-image: url(../images/logo.png);
+    }
+
+    @include onDesktop {
+      grid-column: 6 / 8;
+    }
   }
 }
