--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -12,7 +12,7 @@
 }
 
 @mixin onTablet {
-  @media (min-width: 576) {
+  @media (min-width: 576px) {
     @content;
   }
 }
@@ -44,4 +44,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@mixin background {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@mixin transform {
+  transition: transform 0.5s;
+
+  &:hover {
+    transform: scale(1.03);
+  }
 }
