--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -2,12 +2,8 @@
   display: grid;
   // max-width: 1280px;
 
-  &--gallery {
-    gap: 30px;
-
-    @include onTablet {
-      display: none;
-    }
+  &--contacts {
+    margin: 0 auto;
   }
 
   @include onMobile {
