--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -36,5 +36,9 @@
     background-image: url(/images/icons/instagram-icon.svg);
     height: 24px;
     width: 24px;
+
+    @include onTablet {
+      margin-right: 20px;
+    }
   }
 }
