--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -13,12 +13,13 @@
     list-style: none;
 
     @include onMobile {
+      flex-direction: row;
       gap: 28px;
       row-gap: 30px;
     }
 
     @include onTablet {
-      // flex-direction: row;
+      flex-direction: row;
       gap: 20px;
       row-gap: 30px;
     }
