--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -26,7 +26,8 @@
     }
 
     &--events {
-      margin-bottom: 151px;
+      // margin-bottom: 151px;
+      margin-bottom: 0;
     }
 
     &--contacts {
@@ -46,6 +47,20 @@
     font-weight: 700;
     line-height: 100%;
     margin-bottom: 56px;
+
+    &--gallery {
+      @include onMobile {
+        text-align: center;
+      }
+
+      @include onTablet {
+        text-align: left;
+      }
+
+      @include onDesktop {
+        text-align: left;
+      }
+    }
 
     &--contacts {
       text-align: center;
