--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,4 +1,11 @@
 .schedule {
+  @include onTablet {
+    margin-bottom: 64px;
+  }
+
+  @include onMobile {
+    margin-bottom: 70px;
+  }
 
   &__title {
     color: #fff;
@@ -67,7 +74,7 @@
       }
 
       @include onTablet {
-        width: 144px;
+        width: 220px;
       }
 
       @include onDesktop {
