--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -5,26 +5,38 @@
   background-repeat: no-repeat;
   height: 550px;
 
+  @include onTablet {
+    height: 380px;
+  }
+
   &__block {
     padding: 163px 0;
+
+    @include onTablet {
+      padding: 82px 0;
+    }
+    // margin: 0 auto;
   }
 
   &__text {
     color: #fff;
     text-align: center;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: IBM Plex San, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
     margin-bottom: 72px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
   }
 
   &__flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
   }
 
   &__form-field {
@@ -39,5 +51,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
+
+    @include onTablet {
+      width: 374px;
+    }
   }
 }
