--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,12 +1,25 @@
 .events {
+  box-sizing: border-box;
 
   &__event {
     margin-bottom: 104px;
+
+    &--last {
+      @include onDesktop {
+        height: 652px;
+        margin-bottom: 200px;
+      }
+
+      @include onTablet {
+        height: 390px;
+        margin-bottom: 150px;
+      }
+    }
   }
 
   &__image {
     // overflow: hidden;
-    box-sizing: border-box;
+    // box-sizing: border-box;
 
     @include onTablet {
       margin-bottom: 44px;
@@ -100,10 +113,11 @@
   &__big-block {
     margin: 0 auto;
     width: 370px;
-    height: 204px;
+    // height: 204px;
     transform: translateY(-50%);
     padding: 45px 100px;
     background-color: #fff;
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
   }
 
   &__image--big {
