--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -23,7 +23,25 @@
     margin: 0 auto;
     width: 1px;
     height: 260px;
-    background: rgba(26, 90, 76, 0.5);
+    background-color: rgba(26, 90, 76, 0.5);
+
+    @include onMobile {
+      height: 1px;
+      width: 100%;
+      margin-bottom: 40px;
+    }
+
+    @include onTablet {
+      height: 1px;
+      width: 100%;
+      background-color: rgba(26, 90, 76, 0.5);
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      width: 1px;
+      height: 260px;
+    }
   }
 
   &__copyright {
