--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -11,6 +11,11 @@
     @include forTablet () {
       grid-column: 2 / 4;
     }
+
+    @include forDesktop() {
+      grid-column: 8 / 12;
+      grid-row: 1 / 2;
+    }
   }
 
   &__logo {
@@ -18,6 +23,8 @@
       grid-column-start: 1;
       grid-row-start: 1;
       height: 72px;
+      width: 98px;
+      background-position: left;
       margin-bottom: 64px;
     }
   }
@@ -27,12 +34,21 @@
       grid-column-start: 1;
       height: 24px;
     }
+
+    @include forDesktop() {
+      grid-row: 1;
+      margin-top: 134px;
+    }
   }
 
   &__opening {
     @include forTablet () {
       grid-column: 2 / 3;
       grid-row: 1 / 4;
+    }
+
+    @include forDesktop() {
+      grid-column: 3 / 5;
     }
   }
 
@@ -41,11 +57,21 @@
       grid-column: 3 / 4;
       grid-row: 1 / 4;
     }
+
+    @include forDesktop() {
+      grid-column: 5 / 7;
+    }
   }
 
   @include forTablet() {
     grid-template-columns: 98px 220px 220px 98px;
     justify-items: start;
     align-items: start;
+  }
+
+  @include forDesktop() {
+    grid-template-columns: repeat(12, 70px);
+    gap: 30px;
+    margin-bottom: 87px;
   }
 }
