--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -10,6 +10,10 @@
     @include forTablet {
       grid-template-columns: repeat(2, 220px);
     }
+
+    @include forDesktop() {
+      grid-template-columns: repeat(2, 170px);
+    }
   }
 
   &__link {
