--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -38,9 +38,13 @@
       margin-bottom: 20px;
       color: #fff;
 
-      @include forTablet {
+      @include forTablet() {
         margin-top: 82px;
         margin-bottom: 16px;
+      }
+
+      @include forDesktop() {
+        margin-top: 163px;
       }
     }
   }
