--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -28,11 +28,10 @@
 
   &--red {
     border: transparent;
-    width: 280px;
+    width: 100%;
     height: 50px;
 
     @include forTablet() {
-      width: 460px;
       height: 70px;
     }
   }
@@ -81,6 +80,10 @@
     @include forTablet() {
       width: 350px;
       height: 70px;
+    }
+
+    @include forDesktop() {
+      width: 438px;
     }
 
     ::placeholder {
