--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,8 +1,21 @@
+@use "./utils/_mixins.scss" as *;
+
 .subscribe {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 -20px 50px;
+  height: 386px;
+
+  @include forTablet() {
+    margin: 0 -34px 51px;
+    height: 380px;
+  }
+
+  @include forDesktop() {
+    margin: 0 -55px 51px;
+    height: 550px;
+  }
 
   &__background {
     background-image: url(../images/subscribe_image.jpg);
@@ -10,11 +23,15 @@
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
-    height: 386px;
+    height: 100%;
     object-fit: cover;
     object-position: center;
     position: relative;
     z-index: 0;
+
+    @include forTablet() {
+      background-image: url(../images/subscribe_image-tablet.jpg);
+    }
   }
 
   &__content {
@@ -27,8 +44,12 @@
     align-items: center;
     width: 280px;
 
-    @include forTablet {
+    @include forTablet() {
       width: 460px;
+    }
+
+    @include forDesktop() {
+      width: 570px;
     }
   }
 
