--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,10 +28,6 @@ a, a:hover, a:focus, a:active {
   font-family: 'Montserrat', sans-serif;
 }
 
-.red__title {
-  background-color: #F14A27;
-}
-
 .header {
   &__container {
       height: 655px;
@@ -51,14 +47,14 @@ a, a:hover, a:focus, a:active {
     }
 
     @media (max-width: 689px) {
-      all: revert;
+      //all: revert;
       display: flex;
       flex-direction: column;
       background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
       background-size: 100% auto;
       background-repeat: no-repeat;
       width: 100%;
-      height: 553px;
+      height: 100%;
     }
   }
 
@@ -86,11 +82,13 @@ a, a:hover, a:focus, a:active {
     @media (max-width: 689px) {
       all: revert;
       position: absolute;
-      margin: 33px 0 0 23px;
-      height: 12px;
+      height: auto;
+      margin-top: 6vw;
+      margin-left: 0.5vw;
 
       & img {
-        height: 100%;
+        height: 7vw;
+        width: 7vw;
       }
     }
   }
@@ -114,10 +112,10 @@ a, a:hover, a:focus, a:active {
 
     @media (max-width: 689px) {
       display: block;
-      position: relative;
-      margin: 97vw auto 0;
-      line-height: 45px;
-      font-size: 45px;
+      order: 2;
+      margin-top: 8vw;
+      line-height: 14vw;
+      font-size: 14vw;
       text-align: center;
     }
   }
@@ -152,9 +150,10 @@ a, a:hover, a:focus, a:active {
     }
 
     @media (max-width: 689px) {
-      margin-top: 20px;
-      height: 50px;
-      width: 279px;
+      margin-top: 6vw;
+      height: 16.5vw;
+      width: 85vw;
+      order: 3;
     }
 
     &__title {
@@ -168,9 +167,7 @@ a, a:hover, a:focus, a:active {
       text-align: center;
 
       @media (max-width: 689px) {
-        width: 230px;
-        height: 50px;
-        line-height: 50px;
+        width: 100%;
       }
     }
 
@@ -181,7 +178,7 @@ a, a:hover, a:focus, a:active {
       background-color: #1a5a4c;
 
       @media (max-width: 689px) {
-        width: 50px;
+        width: 22vw;
       }
 
       transition: background-color 0.5s ease-in-out;
@@ -245,7 +242,12 @@ a, a:hover, a:focus, a:active {
     }
 
     @media (max-width: 689px) {
-      display: none;
+      display: block;
+      min-width: 320px;
+      max-width: 100%;
+      min-height: 320px;
+      padding-bottom: 100%;
+      order: 1;
     }
   }
 
@@ -279,12 +281,14 @@ a, a:hover, a:focus, a:active {
 
     @media (max-width: 689px) {
       position: absolute;
-      width: 55px;
-      font-size: 30px;
-      line-height: 30px;
-      text-align: left;
-      top: -12px;
-      left: 40%;
+      width: auto;
+      font-size: 9vw;
+      line-height: 9vw;
+      text-align: center;
+      top: 1vw;
+      margin-top: 3vw;
+      left: 50%;
+      transform: translateX(-50%);
     }
   }
 }
@@ -346,6 +350,10 @@ a, a:hover, a:focus, a:active {
     padding-left: 39px;
     height: auto;
     justify-content: start;
+  }
+
+  @media (max-width: 689px) {
+    display: none;
   }
 
   &__working-schedule {
@@ -455,9 +463,10 @@ a, a:hover, a:focus, a:active {
   }
 
   @media (max-width: 689px) {
-    all: revert;
-    width: 280px;
-    margin: -30px auto 0;
+    //width: 280px;
+    width: 87.5vw;
+    //margin-top: 70px;
+    margin-top: 25vw;
   }
 
   &__title {
@@ -481,6 +490,10 @@ a, a:hover, a:focus, a:active {
     flex-direction: row;
     margin-bottom: 104px;
 
+    @media (max-width: 689px) {
+      margin-bottom: 20vw;
+    }
+
     &:hover {
       .events__picture {
         scale: 1.2;
@@ -489,6 +502,11 @@ a, a:hover, a:focus, a:active {
         @media (min-width: 690px) and (max-width: 1245px) {
           scale: 1.1;
           transform-origin: center;
+        }
+
+        @media (max-width: 689px) {
+          scale: 115%;
+          transform-origin: 50% 50%;
         }
       }
     }
@@ -516,6 +534,11 @@ a, a:hover, a:focus, a:active {
       color: #687480;
       margin-right: 25px;
       left: 0;
+
+      @media (max-width: 689px) {
+        line-height: 18vw;
+        font-size: 16px;
+      }
     }
 
     &-date {
@@ -525,6 +548,13 @@ a, a:hover, a:focus, a:active {
       font-size: 14px;
       line-height: 150%;
       color: #1A5A4C;
+
+      @media (max-width: 689px) {
+        font-size: 16px;
+        font-weight: 700;
+        float: right;
+        line-height: 18vw;
+      }
     }
 
     &-title {
@@ -539,6 +569,13 @@ a, a:hover, a:focus, a:active {
       color: #0F0E08;
       margin-top: 32px;
 
+      @media (max-width: 689px) {
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 28px;
+        margin-top: 0;
+      }
+
       &::after {
         content: '';
         display: inline-block;
@@ -547,6 +584,12 @@ a, a:hover, a:focus, a:active {
         height: 15px;
         width: 15px;
         background-color: #F14A27;
+
+        @media (max-width: 689px) {
+          height: 10px;
+          width: 10px;
+          margin-left: 10px;
+        }
       }
     }
 
@@ -579,12 +622,12 @@ a, a:hover, a:focus, a:active {
     }
 
     @media (max-width: 689px) {
-      min-width: none;
       height: auto;
       min-width: 280px;
 
       & img {
         width: 280px;
+        transform-origin: 50% 50%;
       }
     }
   }
@@ -629,6 +672,10 @@ a, a:hover, a:focus, a:active {
       margin: 0 auto;
       content: url(../images/lecture_tablet.jpg);
     }
+
+    @media (max-width: 689px) {
+      content: url(../images/lecture_320.jpg);
+    }
   }
 
   &__details {
@@ -642,6 +689,32 @@ a, a:hover, a:focus, a:active {
     @media (min-width: 690px) and (max-width: 1245px) {
       margin-bottom: 88px;
     }
+
+    @media (max-width: 689px) {
+      width: 86vw;
+      padding: 0;
+      margin: -18vw auto 0;
+      background-color: white;
+      height: fit-content;
+      padding-bottom: 8vw;
+      transition: opacity 0.5s ease-in-out;
+
+      &:hover {
+        opacity: 0.3;
+
+        .lecture__type, .lecture__date {
+          opacity: 0;
+        }
+      }
+    }
+  }
+
+  &__type {
+    @media (max-width: 689px) {
+      margin-left: 5vw;
+      margin-right: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
   }
 
   &__title {
@@ -652,11 +725,18 @@ a, a:hover, a:focus, a:active {
     line-height: 100%;
     color: #0F0E08;
     margin-top: 16px;
+
+    @media (max-width: 689px) {
+      font-size: 8.5vw;
+      font-weight: 400;
+      text-align: center;
+    }
   }
 
   &__date {
     float: right;
     width: 170px;
+    transition: opacity 0.5s ease-in-out;
   }
 }
 
@@ -668,6 +748,10 @@ a, a:hover, a:focus, a:active {
   grid-row-gap: 30px;
   justify-content: center;
   grid-template-rows: calc(48px + 56px) 600px 360px;
+
+  @media (max-width: 689px) {
+    display: none;
+  }
 
   &__photo_1 {
     grid-column: 1 / span 4;
@@ -705,6 +789,16 @@ a, a:hover, a:focus, a:active {
     height: 380px;
   }
 
+  @media (max-width: 689px) {
+    background-image: url(../images/subscription_320.jpg);
+    display: block;
+    margin-top: 5vw;
+    height: fit-content;
+    padding: 28vw 5vw 30vw;
+    background-size: auto 100%;
+    background-position: center;
+  }
+
   &__title {
     color: #fff;
     margin-top: 163px;
@@ -712,6 +806,10 @@ a, a:hover, a:focus, a:active {
 
     @media (min-width: 690px) and (max-width: 1245px) {
       margin-top: 82px;
+    }
+
+    @media (max-width: 689px) {
+      margin: 0;
     }
   }
 
@@ -724,6 +822,12 @@ a, a:hover, a:focus, a:active {
     font-weight: normal;
     font-size: 18px;
     line-height: 100%;
+
+    @media (max-width: 689px) {
+      line-height: 150%;
+      text-align: center;
+      margin-top: 8vw;
+    }
   }
 
   &__input {
@@ -737,6 +841,12 @@ a, a:hover, a:focus, a:active {
       margin-top: 64px;
     }
 
+    @media (max-width: 689px) {
+      width: 87vw;
+      margin: 18vw auto 0;
+      height: 16vw;
+    }
+
     &-field {
       width: 470px;
       background-color: white;
@@ -745,6 +855,11 @@ a, a:hover, a:focus, a:active {
       -moz-box-shadow: none;
       box-shadow: none;
       padding-left: 32px;
+
+      @media (max-width: 689px) {
+        width: 100%;
+        padding-left: 7vw;
+      }
 
       &::placeholder {
         font-family: 'Montserrat';
@@ -765,6 +880,12 @@ a, a:hover, a:focus, a:active {
 
       &:hover {
         cursor: pointer;
+      }
+
+      @media (max-width: 689px) {
+        height: 100%;
+        padding: 0;
+        border: 0;
       }
     }
   }
@@ -797,6 +918,15 @@ textarea:focus, input:focus {
     height: auto;
   }
 
+  @media (max-width: 689px) {
+    width: 100vw;
+    height: auto;
+    grid-template-columns: repeat(2, 40vw);
+    grid-template-rows: repeat(5, auto);
+    gap: 20px;
+    overflow-x: visible;
+  }
+
   &__logo {
     grid-column: 1 / 2;
     height: 72px;
@@ -805,6 +935,12 @@ textarea:focus, input:focus {
     font-size: 36px;
     line-height: 100%;
     color: #0F0E08;
+
+    @media (max-width: 689px) {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      padding-left: 2vw;
+    }
   }
 
   &__social {
@@ -818,6 +954,17 @@ textarea:focus, input:focus {
       & img {
         margin-bottom: 20px;
       }
+    }
+
+    @media (max-width: 689px) {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+      display: flex;
+      width: 100%;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: flex-end;
+      padding-left: 5vw;
     }
   }
 
@@ -847,6 +994,10 @@ textarea:focus, input:focus {
   &__X {
     height: 24px;
     width: 24px;
+
+    @media (max-width: 689px) {
+      margin-right: 17px;
+    }
   }
 
   &__copyright {
@@ -866,6 +1017,32 @@ textarea:focus, input:focus {
       grid-row: 5;
       margin: 110px 0 36px;
     }
+
+    @media (max-width: 689px) {
+      grid-column: 1 / 3;
+      grid-row: 5 / 6;
+      display: grid;
+      grid-template-rows: auto;
+      grid-template-columns: 100%;
+      margin-top: 14vw;
+      line-height: 8vw;
+    }
+  }
+
+  &__designer {
+    @media (max-width: 689px) {
+      grid-row: 1 / 2;
+      text-align: center;
+    }
+  }
+
+  &__rights {
+    @media (max-width: 689px) {
+      grid-row: 2 / 3;
+      text-align: center;
+      margin-top: 1vw;
+      padding-bottom: 20vw;
+    }
   }
 
   &__working-schedule {
@@ -879,6 +1056,12 @@ textarea:focus, input:focus {
 
     @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 2 / 3 / 4;
+    }
+
+    @media (max-width: 689px) {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      padding-top: 7vw;
     }
   }
 
@@ -906,6 +1089,13 @@ textarea:focus, input:focus {
     @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 4 / 3 / 6;
     }
+
+    @media (max-width: 689px) {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      padding-top: 7vw;
+      padding-right: 5vw;
+    }
   }
 
   &__separator {
@@ -921,6 +1111,15 @@ textarea:focus, input:focus {
       height: 1px;
       width: calc((4*90px + 3*30px));
       margin: 64px 0;
+    }
+
+    @media (max-width: 689px) {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4;
+      height: 1px;
+      width: 100%;
+      margin: 0;
+      margin-bottom: 7vw;
     }
   }
 
@@ -946,6 +1145,19 @@ textarea:focus, input:focus {
 
       &-col-2 {
         grid-column: 4 / 6;
+      }
+    }
+
+    @media (max-width: 689px) {
+      grid-column: 1 / 3;
+      grid-row: 4 / 5;
+
+      &-col-1 {
+        grid-column: 1 / 2;
+      }
+
+      &-col-2 {
+        grid-column: 2 / 3;
       }
     }
   }
@@ -1009,7 +1221,6 @@ textarea:focus, input:focus {
     width: 500%;
     margin: 0;
     left: 0;
-    // animation: 20s slider infinite;
   }
 
   .slider figure img {
@@ -1021,15 +1232,65 @@ textarea:focus, input:focus {
 }
 
 @media (max-width: 689px) {
-  .page {
-    background-color:red;
+  .slider {
+    display: block;
+    justify-content: center;
+    width: 100vw;
+    overflow-x: hidden;
+    margin: 30vw auto 0;
+
+    &__title {
+      margin: 0 auto 14vw;
+      font-size: 12vw;
+      font-weight: 700;
+    }
+
+    &__container {
+      height: 135vw;
+      width: 95%;
+      margin: 0 0 0 6vw;
+      overflow: hidden;
+    }
+
+    &__buttons {
+      display: flex;
+      justify-content: center;
+      margin: 21px auto 81px;
+    }
+
+    &__button {
+      width: 9px;
+      height: 9px;
+      background-color: #E0E0E0;
+      border-radius: 50%;
+      margin: 11px;
+      display: inline-block;
+
+      &:active {
+        background-color: #1A5A4C;
+      }
+    }
   }
 
-  .lecture, .gallery, .subscription, .slider {
-    display: none;
+  .btn1 {
+    background-color: #1A5A4C;
   }
 
-  .footer {
-    display: none;
+  .slider figure {
+    position: relative;
+    width: 490vw;
+    margin: 0 0 0 2vw;
+    left: 0;
+    // animation: 2s slider infinite;
+  }
+
+  .slider figure img {
+    float: left;
+    width: calc(19% - 1vw);
+    height: 135vw;
+    margin-right: 1vw;
+    margin-left: 0;
+    object-fit: contain;
+    object-position: left;
   }
 }
