menu for tablet ready

--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -46,6 +46,12 @@
       background-color: #fff;
       margin-top: -115px;
       margin-bottom: -120px;
+
+      @include forTablet() {
+        transform: none;
+        height: 145px;
+        margin-top: 1px;
+      }
     }
   }
 }
