--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,4 @@
 @import "./blocks/footer.scss";
 @import "./blocks/hamburger.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/upward.scss";
