fix desctop version

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,6 +1,6 @@
 .events {
   padding-inline: 20px;
-  padding-bottom: 60px;
+  padding: 88px 0 60px;
   text-align: center;
 
   @include onTablet {
@@ -9,12 +9,12 @@
     padding-bottom: 0;
   }
 
-  // @include onDesctop {
-  //   padding-inline: 55px;
-  // }
+  @include onDesctop {
+    padding-inline: 55px;
+  }
 
   &__wrapper {
-    margin: 88px 0 112px;
+    margin-bottom: 112px;
   }
 
   &__catalog {
@@ -27,13 +27,13 @@
     gap: 64px;
   }
 
-  // @include onDesctop {
-  //   gap: 104px;
-  // }
+  @include onDesctop {
+    gap: 104px;
+  }
 }
 
   &__title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
@@ -49,9 +49,9 @@
       // width: 460px;
     }
 
-    // @include onDesctop {
-    //   font-size: 48px;
-    //   line-height: 48px;
-    // }
+    @include onDesctop {
+      font-size: 48px;
+      line-height: 48px;
+    }
   }
 }
