--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,6 +10,12 @@
     padding-inline: 34px;
   }
 
+  @include onDesctop {
+    &__cover {
+      display: flex;
+    }
+  }
+
   &__wrapper {
     margin-top: 50px;
 
@@ -35,7 +41,7 @@
 
   &__media {
     display: flex;
-    gap: 20px;
+    gap: 22px;
   }
 
   &__conteiner {
@@ -44,11 +50,18 @@
     gap: 20px;
     padding-bottom: 70px;
     border-bottom: 1px solid $background-c-green;
-    width: fit-content;
     position: relative;
 
     @include onTablet {
       padding-bottom: 64px;
+    }
+
+    @include onDesctop {
+      padding-right: 65px;
+      margin-bottom: 87px;
+      border-bottom: none;
+      border-right: 1px solid $background-c-green;
+      width: fit-content;
     }
   }
 
@@ -96,9 +109,9 @@
     background: transparent
       url(../images/icons/arrow-up.svg) center / 10px auto no-repeat;
 
-      @include onTablet {
-        display: none;
-      }
+    @include onTablet {
+      display: none;
+    }
   }
 
   &__nav {
@@ -106,6 +119,10 @@
 
     @include onTablet {
       margin: 64px auto 154px;
+    }
+
+    @include onDesctop {
+      margin: 50px 0 0 65px;
     }
   }
 
