--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -1,9 +1,9 @@
 .menu {
   background-color: $background-c-green;
-  // height: 399px;
   color: $background-c-white;
   box-sizing: border-box;
-  padding: 27px 20px;
+  padding-inline: 20px;
+  padding-block: 27px;
 
   position: fixed;
   top: 0;
@@ -21,9 +21,23 @@
     pointer-events: all;
   }
 
-  // @include onDesctop {
-  //   display: flex;
-  //   justify-content: space-between;
+  @include onTablet {
+    display: flex;
+    padding-inline: 34px;
+    padding-block: 39px;
+    // border-left: 1px solid $background-c-white;
+  }
+
+  @include onDesctop {
+    padding-inline: 56px;
+    padding-block: 40px;
+  }
+
+  // &__wrapper {
+  //   @include onDesctop {
+  //     display: flex;
+  //     justify-content: center;
+  //   }
   // }
 
   &__nav {
@@ -40,9 +54,15 @@
     border-bottom: 1px solid $background-c-white;
     width: fit-content;
 
-    // @include onDesctop {
-    //   border-bottom: none;
-    // }
+    @include onTablet {
+      border-bottom: none;
+      padding-bottom: 0;
+      gap: 30px;
+    }
+
+    @include onDesctop {
+      gap: 102px;
+    }
   }
 
   &__navigation {
@@ -50,6 +70,18 @@
     flex-wrap: wrap;
     row-gap: 24px;
     column-gap: 28px;
+
+    @include onTablet {
+      width: 220px;
+      height: 16px;
+      gap: 20px;
+      margin-right: 30px;
+    }
+
+    @include onDesctop {
+      width: 368px;
+      margin-right: 102px;
+    }
   }
 
   &__navigation__link {
@@ -60,6 +92,10 @@
     font-size: 16px;
     line-height: 16px;
     color: $background-c-white;
+
+    @include onDesctop {
+      width: 169px;
+    }
   }
 
   &__schedule {
@@ -68,16 +104,28 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 19px;
+
+    @include onTablet {
+      margin-top: 0;
+      padding-left: 38px;
+      border-left: 1px solid $background-c-white;
+
+      display: flex;
+      gap: 26px;
+    }
+
+    @include onDesctop {
+      gap: 30px;
+      padding-left: 102px;
+    }
   }
 
-  // @include onTablet {
-  //   &__schedule:not(:first-child) {
-  //     display: grid;
-  //     grid-template-areas: "name name"
-  //     "time desc";
-  //     column-gap: 26px;
-  //   }
-  // }
+  &__schedule__wrapper {
+    @include onTablet {
+      box-sizing: border-box;
+      width: 170px;
+    }
+  }
 
   &__title {
     text-decoration: none;
@@ -90,11 +138,20 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 5px;
     margin-bottom: 16px;
-
     font-size: 14px;
     line-height: 21px;
+
+    @include onTablet {
+      margin: 0;
+    }
+  }
+
+  @include onTablet {
+    &__description {
+      width: 144px;
+      padding-top: 47px;
+    }
   }
 
   &__schedule__time {
