--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,26 +1,22 @@
 .event {
   text-align: left;
-  // width: 280px;
 
-  // &__image__container {
-    // max-width: 280px;
-
-    // @include onTablet {
-    //   max-width: 700px;
-    // }
-
-    // @include onDesctop {
-    //   width: 670px;
-    // }
-  // }
+  @include onDesctop {
+    display: flex;
+    gap: 130px;
+  }
 
   &__image {
     width: 100%;
-    // height: auto;
     margin-bottom: 20px;
 
     @include onTablet {
       margin-bottom: 40px;
+    }
+
+    @include onTablet {
+      width: 670px;
+      margin-bottom: 0;
     }
   }
 
