--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -15,6 +15,11 @@
     @include onTablet {
       margin-inline: 34px;
     }
+
+    @include onDesctop {
+      margin-inline: 0;
+      height: 550px;
+    }
   }
 
   &__container {
@@ -31,6 +36,10 @@
       width: 570px;
       margin-bottom: 150px;
       margin: 0 auto;
+    }
+
+    @include onDesctop {
+      transform: translateY(235%);
     }
   }
 
