--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -14,6 +14,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include onDesctop {
+      height: 550px;
+    }
   }
 
   &__title {
@@ -27,7 +31,6 @@
     @include onTablet {
       font-size: 48px;
       line-height: 48px;
-      // margin-bottom: 18px;
     }
   }
 
@@ -84,6 +87,10 @@
       @include onTablet {
         padding: 29px 31px;
         margin-left: 16px;
+      }
+
+      @include onDesctop {
+        margin-left: 30px;
       }
     }
   }
