fix desctop version

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -57,6 +57,7 @@
     }
 
     @include onDesctop {
+      padding-bottom: 0;
       padding-right: 65px;
       margin-bottom: 87px;
       border-bottom: none;
