fix desctop version

--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -14,7 +14,7 @@
       margin-bottom: 40px;
     }
 
-    @include onTablet {
+    @include onDesctop {
       width: 670px;
       margin-bottom: 0;
     }
@@ -24,10 +24,6 @@
     @include onTablet {
       width: 460px;
     }
-
-    // @include onDesctop {
-    //   width: 370px;
-    // }
   }
 
   &__subtitle {
@@ -42,11 +38,6 @@
     @include onTablet {
       margin-bottom: 30px;
     }
-
-    // @include onDesctop {
-    //   font-size: 14px;
-    //   line-height: 14px;
-    // }
   }
 
   &__date {
@@ -62,7 +53,7 @@
   }
 
   &__title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 28px;
@@ -86,14 +77,10 @@
   }
 
   &__description {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
     font-size: 16px;
     line-height: 24px;
     color: #4e4e4e;
-
-    // @include onTablet {
-
-    // }
   }
 }
