--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,5 +1,4 @@
 .events {
-  padding-inline: 20px;
   padding: 88px 0 60px;
   text-align: center;
 
@@ -39,6 +38,7 @@
     line-height: 36px;
     color: $c-for-text;
     width: 280px;
+    // padding-inline: 20px;
 
     padding-bottom: 40px;
 
@@ -46,7 +46,6 @@
       padding-bottom: 48px;
       width: 100%;
       text-align: left;
-      // width: 460px;
     }
 
     @include onDesctop {
