--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,7 +4,7 @@
     text-align: center;
     box-sizing: border-box;
     padding-inline: 20px;
-    // padding-top: 9px;
+    padding-top: 9px;
 
     background-image: url(..//images/mobile-muzej.png);
     background-repeat: no-repeat;
