add hover effects

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -93,6 +93,12 @@
     line-height: 16px;
     color: $background-c-white;
 
+    @include onTablet {
+      &:hover {
+        @include forLinks;
+      }
+    }
+
     @include onDesctop {
       width: 169px;
     }
