--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -12,6 +12,11 @@
 
     @include onTablet {
       margin-bottom: 40px;
+      transition: all 0.3s;
+
+      &:hover {
+        @include forInteractiveImage;
+      }
     }
 
     @include onDesctop {
