--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -48,6 +48,11 @@
     @include onTablet {
       width: 340px;
       height: 543px;
+      transition: all 0.3s;
+
+      &:hover {
+        @include forInteractiveImage;
+      }
     }
 
     @include onDesctop {
