--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -90,6 +90,11 @@
   &__bottom__container {
     display: flex;
     justify-content: center;
+    transition: all 0.3s;
+
+    &:hover {
+      @include forHoverBtn;
+    }
   }
 
   &__bottom__link {
@@ -106,6 +111,7 @@
     padding: 15px 0;
 
     box-sizing: border-box;
+    // transition: all 0.3s;
 
     @include onTablet {
       width: 200px;
@@ -118,9 +124,15 @@
     box-sizing: border-box;
     background-color: $background-c-green;
     padding: 16px 21px;
+    transition: all 0.3s;
 
     @include onTablet {
       padding: 25.5px 31px;
+
+      // &:hover {
+      //   @include forHoverBtn;
+      //   border-left: 0;
+      // }
     }
   }
 
