--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  transition: all 0.3s;
 
   &--menu {
     background-image: url(../images/icons/menu.svg);
@@ -15,6 +16,7 @@
     width: 55px;
     height: 61px;
     background-image: url(../images/logo-NA-MU.svg);
+    @include forLogo;
   }
 
   &--close {
@@ -27,6 +29,7 @@
     width: 63px;
     height: 72px;
     background-image: url(../images/logo-NA-MU.svg);
+    @include forLogo;
   }
 
   &--facebook {
