--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -24,3 +24,31 @@
   line-height: 36px;
   color: $c-for-text;
 }
+
+@mixin forInteractiveImage {
+  box-sizing: border-box;
+  cursor: pointer;
+  border-radius: 50px;
+  border-bottom: 3px solid $c-black;
+  border-left: 3px solid $c-black;
+}
+
+@mixin forHoverBtn {
+  box-sizing: border-box;
+  cursor: pointer;
+  border-bottom: 2px solid $c-orange;
+  border-left: 2px solid $c-orange;
+}
+
+@mixin forLinks {
+  cursor: pointer;
+  color: $c-orange;
+  transition: all 0.3s;
+}
+
+@mixin forLogo {
+  &:hover {
+    transform: scale(90%);
+    box-shadow: 10px 5px 5px $background-c-green;
+  }
+}
