--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -35,7 +35,6 @@
       flex-direction: column;
       justify-content: start;
       gap: 62px;
-      // margin-bottom: 0;
     }
   }
 
@@ -97,6 +96,13 @@
     color: inherit;
     text-decoration: none;
     font-weight: 400;
+  }
+
+  &__link,
+  &__nav__link {
+    &:hover {
+      @include forLinks;
+    }
   }
 
   &__top__button {
