--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -28,6 +28,10 @@
     line-height: 100%;
     margin-bottom: 72px;
 
+    @include onMobile {
+      margin-bottom: 50px;
+    }
+
     @include onTablet {
       margin-bottom: 64px;
     }
@@ -37,6 +41,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include onMobile {
+      justify-content: left;
+    }
   }
 
   &__form-field {
@@ -51,6 +59,13 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
+    border-width: 0;
+
+    @include onMobile {
+      width: 230px;
+      height: 50px  ;
+      padding: 18px 24px;
+    }
 
     @include onTablet {
       width: 374px;
