--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -20,6 +20,11 @@
   &__image {
     // overflow: hidden;
     // box-sizing: border-box;
+    @include onMobile {
+      width: 280px;
+      height: 140px;
+      margin-bottom: 20px;
+    }
 
     @include onTablet {
       margin-bottom: 44px;
@@ -44,6 +49,11 @@
     &--big {
       gap: 130px;
       margin-bottom: 23px;
+
+      @include onMobile {
+        gap: 30px;
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -54,6 +64,12 @@
     font-style: normal;
     font-weight: 500;
     line-height: 100%;
+
+    @include onMobile {
+      font-size: 16px;
+      margin-left: 21px;
+      margin-top: 24px;
+    }
   }
 
   &__dates {
@@ -63,6 +79,12 @@
     font-style: normal;
     font-weight: 700;
     line-height: 150%;
+
+    @include onMobile {
+      font-size: 16px;
+      // margin-right: 30px;
+      margin-top: 20px;
+    }
   }
 
   &__name {
@@ -76,6 +98,10 @@
     margin-bottom: 15px;
     width: max-content;
     padding-right: 20px;
+
+    @include onMobile {
+      font-size: 28px;
+    }
 
     &::after {
       position: absolute;
@@ -98,6 +124,12 @@
       font-style: normal;
       font-weight: 400;
       line-height: 100%;
+
+      @include onMobile {
+        font-size: 28px;
+        text-align: center;
+        padding-bottom: 20px;
+      }
     }
   }
 
@@ -118,6 +150,11 @@
     padding: 45px 100px;
     background-color: #fff;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+
+    @include onMobile {
+      width: 280px;
+      padding: 0;
+    }
   }
 
   &__image--big {
