--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -22,13 +22,27 @@
       height: 540px;
     }
 
+    &--2 {
+      @include onMobile {
+        display: none;
+      }
+    }
+
     &--3 {
+      @include onMobile {
+        display: none;
+      }
+
       @include onTablet {
         display: none;
       }
     }
 
     &--4 {
+      @include onMobile {
+        display: none;
+      }
+
       @include onTablet {
         display: none;
       }
@@ -52,6 +66,7 @@
 
     @include onMobile {
       display: flex;
+      margin-bottom: 100px;
     }
   }
 
