--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,205 +1,160 @@
 .header {
+    position: relative;
 
-  &__background {
+  &__image {
     position: absolute;
-    top: -40px;
+    top: 0;
     right: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
     z-index: -1;
-    background-image: url(../images/Main-page-photo.jpg);
-    // background-position: 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
 
     @include onTablet {
+      width: 49%;
       height: 384px;
-      background-position: 20%;
-      // background-size: contain;
-      // top: -40px;
-      // right: 0;
-      width: 48%;
     }
 
     @include onDesktop {
+      --desktop-block-paddings: calc((100vw - 1170px) / 2);
+
       height: 655px;
-      width: 56.5%;
+      width: calc(670px + var(--desktop-block-paddings)) ;
     }
   }
 
   &__content {
-    margin-top: 40px;
-    box-sizing: border-box;
-    // height: 800px;
+    @include onDesktop {
+      position: relative;
+      height: 655px;
+
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      column-gap: 30px;
+      grid-template-rows: 87px 120px 172px 90px 70px;
+    }
   }
 
-  &__left {
-    position: relative;
+  &__nav {
+    padding-top: 8px;
+    margin-bottom: 250px;
+    display: grid;
+    grid-template-columns: 24px 1fr 24px;
+    align-items: center;
+    justify-items: center;
+
+    @include onTablet {
+      padding-top: 15px;
+      margin-bottom: 40px;
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 20px;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / -1;
+      grid-template-columns: repeat(12, 1fr);
+      column-gap: 30px;
+    }
   }
 
-  &__right {
-    position: relative;
+  &__menu-opener {
+    display: block;
+    height: 24px;
+    width: 24px;
+
+    background-image: url(../images/menu-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    @include hover(scale, 105%);
+
+    @include onTablet {
+      justify-self: start;
+    }
+  }
+
+  &__logo {
+    &-image {
+      display: block;
+      height: 60px;
+
+      @include onDesktop {
+        height: 72px;
+      }
+    }
+
+    @include hover(scale, 105%);
+
+    @include onTablet {
+      grid-column: 4 / 6;
+    }
+
+    @include onDesktop {
+      grid-column: 6 / 8;
+      height: 72px;
+    }
   }
 
   &__title {
-    color: #000;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
-    line-height: 120%;
+    font-size: 45px;
+    line-height: 100%;
+
+    text-align: center;
+
+    color: #000;
+    margin-bottom: 20px;
 
     @include onTablet {
       font-size: 54px;
       margin-bottom: 38px;
+      text-align: left;
+      width: 50%;
     }
 
     @include onDesktop {
       font-size: 72px;
       margin-bottom: 90px;
+      grid-column: 1 / 6;
+      grid-row: 3;
+      width: auto;
     }
   }
 
-  &__flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-
-    @include onTablet {
-      margin-bottom: 18px;
-    }
+  &__to-events {
+    display: none;
 
     @include onDesktop {
-      margin-bottom: 111px;
-    }
-  }
-
-  &__button {
-    box-sizing: border-box;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 67px;
-    width: 270px;
-    height: 70px;
-    border: 1px solid $c-green;
-    background-color: #fff;
-    cursor: pointer;
-    transition: all 0.3s;
-
-    &:hover {
-      transform: scale(101%);
-      box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
-    }
-
-    &-word {
-      color: $c-black-text;
-      font-family: IBM Plex Sans, sans-serif;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 100%;
-    }
-
-    &-arrow {
-      // padding: 47px;
-      width: 70px;
-      height: 70px;
-      display: block;
-      background-color: $c-green;
-      background-image: url(/images/arrow-icon.svg);
-      background-position: center;
-      background-size: auto;
-      background-repeat: no-repeat;
-
-      &--contacts {
-        background-color: $c-red;
-        background-image: url(/images/arrow-icon-black.svg);
-      }
-    }
-  }
-
-  &__vertical-container {
-    position: relative;
-
-    @include onMobile {
-      display: none;
-    }
-
-    @include onTablet {
-      display: none;
-    }
-
-    @include onDesktop {
-      display: inline-block;
-    }
-  }
-
-  &__vertical {
-    position: absolute;
-    top: 25px;
-    transform: rotate(-90deg);
-    color: $c-grey-text;
-    font-family: IBM Plex Sans, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%;
-
-    &::before {
-      display: block;
       position: absolute;
-      right: 150%;
-      top: 50%;
-      content: "";
-      width: 70px;
-      height: 1px;
-      background: $c-green;
-    }
-  }
+      left: 0;
+      bottom: 0;
+      display: block;
 
-  &__image {
-    position: absolute;
-    top: -40px;
-    right: -55px;
-    width: 100%;
-    height: 655px;
-  }
+      width: min-content;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-weight: 700;
+      text-align: left;
+      text-transform: uppercase;
+      text-decoration: none;
+      color: $c-green;
 
-  &__logo {
-    position: absolute;
-    top: -25px;
-    left: 50px;
-  }
+      transform: rotate(-90deg) translateX(calc(100% + 70px)) translateY(-14px);
 
-  &__nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    transform: translateY(-100%);
-    transition: all 0.3s;
+      &::after {
+        position: absolute;
+        content: "";
+        bottom: 50%;
+        right: 100%;
 
-    &:target {
-      background-color: $c-green;
-      transform: translateY(0);
-      z-index: 1;
-      height: 233px;
-    }
+        display: block;
+        width: 70px;
+        height: 1px;
+        margin-right: 20px;
 
-    &-flex {
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-
-      @include onMobile {
-        gap: 28px;
-      }
-
-      @include onTablet {
-        gap: 38px;
-      }
-
-      @include onDesktop {
-        gap: 102px;
+        background-color: $c-green;
       }
     }
   }
