--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -14,6 +14,21 @@
     }
   }
 
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateY(-110%);
+
+    transition-duration: 300ms;
+
+    &:target {
+      transform: translateY(0);
+    }
+  }
+
   &__section {
     // height: 1000px;
 
@@ -48,6 +63,12 @@
     line-height: 100%;
     margin-bottom: 56px;
 
+    @include onMobile {
+      font-size: 36px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
     &--gallery {
       @include onMobile {
         text-align: center;
@@ -66,6 +87,10 @@
       text-align: center;
       color: #fff;
       margin-bottom: 16px;
+
+      @include onMobile {
+        margin-bottom: 20px;
+      }
     }
   }
 }
