--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,12 +4,15 @@
 
 @import "blocks/page.scss";
 @import "blocks/header.scss";
+@import "blocks/tickets.scss";
+@import "blocks/menu.scss";
+@import "blocks/information.scss";
 @import "blocks/container.scss";
 @import "blocks/grid.scss";
 @import "blocks/icon.scss";
 @import "blocks/nav.scss";
-@import "blocks/schedule.scss";
 @import "blocks/events.scss";
 @import "blocks/gallery.scss";
 @import "blocks/contacts.scss";
 @import "blocks/footer.scss";
+@import "blocks/back.scss";
