--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -353,7 +353,11 @@ a, a:hover, a:focus, a:active {
   }
 
   @media (max-width: 689px) {
-    display: none;
+    grid-template-columns: 10vw 1fr 1fr;
+    grid-template-rows: auto;
+    padding: 5vw;
+    padding-top: 10vw;
+    height: auto;
   }
 
   &__working-schedule {
@@ -384,6 +388,24 @@ a, a:hover, a:focus, a:active {
         margin-right: -30px;
       }
     }
+
+    @media (max-width: 689px) {
+      grid-column: 1 / 4;
+      grid-row: 3 / 5;
+      margin-top: 7vw;
+
+      &-col-1 {
+        grid-row: 3 / 4;
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+
+      &-col-2 {
+        grid-row: 4 / 5;
+        margin: 0;
+        padding: 0;
+      }
+    }
   }
 
   &__separator {
@@ -401,6 +423,16 @@ a, a:hover, a:focus, a:active {
       height: 145px;
       width: 1px;
       margin-left: -15px;
+    }
+
+    @media (max-width: 689px) {
+      margin: 0;
+      grid-column: 1 / 4;
+      grid-row: 2 / 3;
+      background-color: #fff;
+      height: 1px;
+      width: 100%;
+      opacity: 50%;
     }
   }
 
@@ -444,6 +476,20 @@ a, a:hover, a:focus, a:active {
         & a:nth-child(4) {
           margin-top: -17px;
         }
+      }
+
+      &-col-2 {
+        grid-column: 3 / 4;
+      }
+    }
+
+    @media (max-width: 689px) {
+      grid-column: 2 / 4;
+      grid-row: 1 / 2;
+      font-size: 5vw;
+
+      &-col-1 {
+        grid-column: 2 / 3;
       }
 
       &-col-2 {
