add some changes

--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -6,6 +6,7 @@
   width: auto;
   height: 210px;
   padding-inline: 20px;
+  position: relative;
 
   @include onTablet {
     height: 390px;
@@ -23,7 +24,9 @@
   }
 
   &__container {
-    transform: translateY(109%);
+    position: absolute;
+    bottom: -35%;
+    // transform: translateY(109%);
     background-color: $background-c-white;
     text-align: center;
     width: 280px;
@@ -32,15 +35,15 @@
     box-shadow: 0 2px 0 0 #1a5a4c40;
 
     @include onTablet {
-      transform: translateY(160%);
+      // transform: translateY(160%);
       width: 570px;
-      margin-bottom: 150px;
-      margin: 0 auto;
+      // margin-bottom: 150px;
+      // margin: 0 auto;
     }
 
-    @include onDesctop {
-      transform: translateY(235%);
-    }
+    // @include onDesctop {
+    //   transform: translateY(235%);
+    // }
   }
 
   &__title {
