--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@ html {
 
 body {
   background: $background-c-white;
+  background-color: blanchedalmond;
   font-family: "IBM Ple x Sans", sans-serif;
   color: $c-for-text;
   margin: 0;
