--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -71,14 +71,12 @@
       margin-bottom: 15px;
     }
 
-    // &::after {
-    //   content: "";
-    //   background-color: $c-orange;
-    //   height: 10px;
-    //   width: 10px;
-    //   // margin-left: 5px;
-    //   display: block;
-    // }
+    &::after {
+      content: url(..//images/icons/Rectangle.svg);
+      margin-left: 5px;
+      width: 10px;
+      height: 10px;
+    }
   }
 
   &__description {
