--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,6 +1,7 @@
 .events {
   padding: 88px 0 60px;
   text-align: center;
+  padding-inline: 20px;
 
   @include onTablet {
     padding-inline: 34px;
