--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,4 +1,5 @@
 .gallery {
+  // margin-top: 100px;
   padding-inline: 20px;
 
   @include onTablet {
@@ -6,7 +7,7 @@
   }
 
   &__title {
-    margin-top: 240px;
+    margin-top: 183px;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
@@ -94,9 +95,13 @@
     height: 9px;
     cursor: pointer;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #e0e0e0;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+
+    &:first-child {
+      background-color: $background-c-green;
+    }
   }
 }
