add some changes

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,9 +1,12 @@
 .gallery {
-  // margin-top: 100px;
   padding-inline: 20px;
 
   @include onTablet {
     padding-inline: 34px;
+  }
+
+  @include onDesctop {
+    padding-inline: 55px;
   }
 
   &__title {
