--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -102,7 +102,7 @@
     border: 1px solid $background-c-green;
     text-decoration: none;
     color: $c-for-text;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
@@ -111,7 +111,6 @@
     padding: 15px 0;
 
     box-sizing: border-box;
-    // transition: all 0.3s;
 
     @include onTablet {
       width: 200px;
@@ -123,16 +122,11 @@
   &__bottom__button {
     box-sizing: border-box;
     background-color: $background-c-green;
-    padding: 16px 21px;
+    padding: 15px 21px;
     transition: all 0.3s;
 
     @include onTablet {
       padding: 25.5px 31px;
-
-      // &:hover {
-      //   @include forHoverBtn;
-      //   border-left: 0;
-      // }
     }
   }
 
