--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -26,7 +26,6 @@
   &__container {
     position: absolute;
     bottom: -35%;
-    // transform: translateY(109%);
     background-color: $background-c-white;
     text-align: center;
     width: 280px;
@@ -35,15 +34,14 @@
     box-shadow: 0 2px 0 0 #1a5a4c40;
 
     @include onTablet {
-      // transform: translateY(160%);
       width: 570px;
-      // margin-bottom: 150px;
-      // margin: 0 auto;
+      left: 70px;
     }
 
-    // @include onDesctop {
-    //   transform: translateY(235%);
-    // }
+    @include onDesctop {
+      bottom: -18%;
+      left: 400px;
+    }
   }
 
   &__title {
