--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -12,7 +12,19 @@ img {
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
-input:-webkit-autofill:focus {
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border-bottom: 1px solid $c-orange;
+  background-color: $background-c-white;
+  -webkit-text-fill-color: $c-black;
+  -webkit-box-shadow: none;
+  transition: background-color 5000s ease-in-out 0s;
+
   border: none;
   border-radius: 0;
 }
