add some changes to hovers

--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -12,6 +12,10 @@
     height: 390px;
   }
 
+  @include onDesctop {
+    height: 550px;
+  }
+
   &__wrapper {
     @include onTablet {
       margin-inline: 34px;
@@ -19,7 +23,6 @@
 
     @include onDesctop {
       margin-inline: 0;
-      height: 550px;
     }
   }
 
@@ -33,14 +36,15 @@
     box-sizing: border-box;
     box-shadow: 0 2px 0 0 #1a5a4c40;
 
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+
     @include onTablet {
       width: 570px;
-      left: 70px;
-    }
-
-    @include onDesctop {
-      bottom: -18%;
-      left: 400px;
+      height: 204px;
+      bottom: -20%;
     }
   }
 
