change default input styles

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -28,7 +28,7 @@
 @mixin forInteractiveImage {
   box-sizing: border-box;
   cursor: pointer;
-  border-radius: 50px;
+  border-radius: 50px 0 50px 50px;
   border-bottom: 3px solid $c-black;
   border-left: 3px solid $c-black;
 }
