--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -68,6 +68,12 @@
       &--big {
         width: 770px;
         height: 600px;
+
+        &:hover {
+          border-radius: 0 50px 50px 50px;
+          border-left: 0;
+          border-right: 3px solid $c-black;
+        }
       }
 
       &--long {
@@ -78,6 +84,12 @@
       &--short {
         width: 370px;
         height: 360px;
+
+        &:hover {
+          border-radius: 0 50px 50px 50px;
+          border-left: 0;
+          border-right: 3px solid $c-black;
+        }
       }
     }
   }
